2002-03-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Version.py (ARCH, PLATFORM): Replace any spaces with
	underscores.

2002-03-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Version.py: Add machine architecture to the mix, and base ALL on
	os.uname().

2002-03-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (make_msgid): Simplify the algorithm.

2002-03-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (formataddr): Sync code with email 1.3.

2002-03-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (formataddr): New function.

	* Defaults.py (MESSAGE_FROM_STYLE): Deprecate 'parens' and
	'unquoted'.
	
	* Util.py (make_date): Use the formatdate() method from
	email.Utils (if available) or rfc822 instead of doing it ourselves.

2002-03-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (pipecmd): Bugfix.  A program that exits 0 but outputs
	to stderr should not be considered a failed delivery.

2002-03-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (BOUNCE_TEXT_*): New variables containing the text
	used in TMDA's various failure notices.

	* Util.py (maketext): Search for the templatefile in a series of
	directories.  First match wins.
	
	* Defaults.py (TEMPLATE_DIR): New variable, replaces
	CONFIRM_ACCEPT_TEMPLATE and CONFIRM_REQUEST_TEMPLATE.

2002-02-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py (make_confirm_address): Use Defaults.CONFIRM_ADDRESS
	if set.

	* Defaults.py (CONFIRM_ADDRESS): New variable.

	* Deliver.py (Deliver.__deliver_mbox): New method to reliably
	deliver a message into an mboxrd-format mbox.

2002-02-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Deliver.py (Deliver.__deliver_maildir): New method to reliably
	deliver a message into a qmail-style Maildir.

	* Util.py (pipecmd): Include getmail copyright for borrowed GPL
	code.
