@@ -1,5 +1,13 @@
 ======================================================================
 
+If you are upgrading from a release of TMDA < 0.50:
+
+* Messages in the pending directory are no longer deleted after they
+  are confirmed (or released) and delivered.  Now they are simply
+  noted in the DELIVERED_CACHE file.  
+
+======================================================================
+
 If you are upgrading from a release of TMDA < 0.49:
 
 * Custom templates are now referred to by a template directory rather
