@@ -1,3 +1,13 @@
+2002-03-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-rfilter (verify_confirm_cookie): Add the pending message's
+	name to Defaults.DELIVERED_CACHE upon sucessful delivery instead
+	of deleting it.  Then, consult the same cache to determine whether
+	a pending message has already been delivered or not.  
+
+	* tmda-pending (main): Skip messages which have already been
+	delivered.
+	
 2002-03-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-inject (message_format): Util.formataddr() now handles the
