@@ -1,3 +1,11 @@
+2002-03-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (BOUNCE_TEXT_ALREADY_CONFIRMED): Removed.  No longer
+	prudent to bounce a message in this situation because of
+	tmda-pending's `release' capability.
+
+	(DELIVERED_CACHE, DELIVERED_CACHE_LEN): New variables.
+	
 2002-03-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Version.py (ARCH, PLATFORM): Replace any spaces with
